# advent2020

./: CHANGELOG.md  README.md  advent1.j  advent10.hoe  advent10b.hoe  advent11.hoe  advent11b.hoe  advent12.hoe  advent12b.hoe  advent13b.hoe  advent14.hoe  advent14b.hoe  advent15.hoe  advent16.hoe  advent16b.hoe  advent18.hoe  advent18b.hoe  advent19b.hoe  advent19b.input.scratch  advent19c.hoe  advent2.perl  advent20.hoe  advent2020.cabal  advent20b.hoe  advent21.hoe  advent22.hoe  advent22b.hoe  advent23b.hoe  advent23bseq.hoe  advent23bvec.hoe  advent2b.hoe  advent3.hoe  advent3.j  advent3b.hoe  advent4.hoe  advent5.broken.j  advent5.hoe  advent5.j  advent5b.hoe  advent7b.hoe  (+3 more)
oneliners/: advent1.hoe  advent10b.hoe  advent11.hoe  advent12b.hoe  advent13.hoe  advent14b.hoe  advent15.hoe  advent15b.hoe  advent16.hoe  advent16b.hoe  advent17.hoe  advent17b.hoe  advent19.hoe  advent19b.input.error  advent1b.j  advent2.hoe  advent20.hoe  advent21.hoe  advent21b.hoe  advent22b.hoe  advent23.hoe  advent24.hoe  advent24b.hoe  advent25.hoe  advent2b.perl  advent3b.hoe  advent4.hoe  advent4b.hoe  advent5.j  advent6.hoe  advent6b.hoe  advent7.hoe  advent8.hoe  advent8.scratch.hoe  advent8b.hoe  advent9b.hoe
src/: Advent01.hs  Advent02.hs  Advent03.hs  Advent04.hs  Advent05.hs  Advent06.hs  Advent07.hs  Advent08.hs  Advent09.hs  Advent10.hs  Advent11.hs  Advent12.hs  Advent13.hs  Advent14.hs  Advent15.hs  Advent16.hs  Advent17.hs  Advent18.hs  Advent19.hs  Advent19ReadP.hs  Advent20.hs  Advent21.hs  Advent22.hs  Advent23.hs  Advent24.hs  Advent25.hs  Main.hs
