cabal-version:       >=1.10

name:                advent2020
version:             0.1.0.0
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable advent2020
  main-is:             Main.hs
  other-modules:
    Advent01, Advent02, Advent03, Advent04, Advent05,
    Advent06, Advent07, Advent08, Advent09, Advent10,
    Advent11, Advent12, Advent13, Advent14, Advent15,
    Advent16, Advent17, Advent18, Advent19, Advent20,
    Advent21, Advent22, Advent23, Advent24, Advent25,
    Advent19ReadP
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
    base >=4.14 && <4.15,
    containers,
    lens-regex-pcre,
    text,
    lens,
    split,
    mtl,
    array,
    arithmoi,
    parsec,
    vector,
    free,
    yoctoparsec,
    parser-combinators
